--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BD Energy - Storm Roster</title>
   <style>
     body {
@@ -80,7 +80,7 @@
     <h2>Storm Roster Sign-Up</h2>
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
     <form id="rosterForm"
-      action="https://script.google.com/macros/s/AKfycbyMs3rR6yfXv-DkXOTVL4P6Hum0ROg_2q33AvVXvjE7LbgX-niWGangPUQUbyAj75U_SA/exec"
+      action="https://script.google.com/macros/s/AKfycbxpVpyY6d_4Hh0Q17st_WLPAgANl7dJzOcNeiMpCq8vPvCE6we-HNRlLLY9CDPMlTmBKA/exec"
       method="POST" target="hidden_iframe"
       onsubmit="setTimeout(() => {
         alert('Thank you! Your info has been submitted.');
@@ -128,3 +128,4 @@
   </footer>
 </body>
 </html>
+
